# desafio-hyperativa

./: README.md  conftest.py  pyproject.toml  requirements.txt
cards/: models.py  serializers.py  urls.py  utils.py  views.py
cards/migrations/: 0001_initial.py
core/: settings.py  urls.py
tests/: test_views.py
