[tool.poetry]
name = "desafio-hyperativa"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
mixer = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"